--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,6 +3,9 @@
 @import url('./base.css');
 @import url('./container.css');
 
+@import "simplelightbox/dist/simple-lightbox.min.css";
+@import "izitoast/dist/css/iziToast.min.css";
+
 @import url('./form.css');
 @import url('./gallery.css');
 
