--- a/src/css/form.css
+++ b/src/css/form.css
@@ -21,25 +21,28 @@
   border-color: #000000;
 }
 .form-input:focus {
-  color: #2e2f42; 
-  border-color: #4E75FF;
+  color: #2e2f42;
+  border-color: #4e75ff;
 }
 
-.form-btn {
-  border-radius: 8px;
-padding: 8px 16px;
-width: 91px;
-height: 40px;
-background: #4e75ff;
-font-weight: 500;
-line-height: 150%;
-letter-spacing: 0.04em;
-color: #fff;
-border-color: transparent;
-transition: background-color 250ms linear;
+.btn {
+ padding: 0 16px; 
+ height: 40px;
+ background: #4e75ff;
+ border-radius: 8px;
+ font-weight: 500;
+ line-height: 150%;
+ letter-spacing: 0.04em;
+ color: #fff;
+ border-color: transparent;
+ transition: background-color 250ms linear;
 }
 
-.form-btn:hover,
-.form-btn:focus {
+/* .form-btn { 
+  width: 91px;
+} */
+
+.btn:hover,
+.btn:focus {
   background: #6c8cff;
 }
